<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorAccent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            app:titleTextColor="@android:color/black"
            app:title=" "
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

        <!-- App Icon and Title -->
        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="30dp"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/app_name"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"/>

            <View
                android:layout_width="48dp"
                android:layout_height="4dp"
                android:background="@color/black"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <!-- App Description -->
        <TextView
            android:id="@+id/txtSubTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_any_word_on_your_screen_and_wordassist_will_instantly_show_its_meaning_in_a_floating_widget"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:lineSpacingExtra="4dp"
            app:layout_constraintTop_toBottomOf="@id/headerLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
        />

        <!-- Enable Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardEnable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@id/txtSubTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/txtWordAssistHeading"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/word_assist"
                    android:textSize="16sp"
                    android:textColor="#212121"
                    android:textStyle="bold"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchEnable"
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    app:thumbTint="@color/switch_thumb_color"
                    app:trackTint="@color/switch_track_color"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardMode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintTop_toBottomOf="@id/cardEnable"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Overlay Mode"
                        android:textSize="16sp"
                        android:textColor="#212121"
                        android:textStyle="bold"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textOn="Manual"
                        android:textOff="Auto" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        <!-- Permissions Section -->
        <TextView
            android:id="@+id/txtRequiredPermissionEnable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enable_the_required_permissions"
            android:textSize="18sp"
            android:textColor="#E53935"
            android:textStyle="bold"
            android:textAlignment="center"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/cardMode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"/>

        <!-- Permissions Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardPermissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@id/txtRequiredPermissionEnable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp">

                <!-- Card Header -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Required Permissions"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#212121"
                    android:paddingBottom="8dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginBottom="12dp"/>


                <!-- Accessibility Permission -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="start">

                    <TextView
                        android:id="@+id/txtAccessibilityStatus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/accessibility_permission"
                        android:textSize="16sp"
                        android:textColor="#424242" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_accessibility"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/allow"
                        android:textColor="@color/gray_600"
                        app:strokeColor="@color/gray_600"
                        app:cornerRadius="50dp"
                        app:strokeWidth="1dp"

                      />
                </LinearLayout>

                <!-- Overlay Permission -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="12dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/txtOverlayStatus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/floating_overlay"
                        android:textSize="16sp"
                        android:textColor="#424242" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_overlay"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/allow"
                        android:textColor="@color/gray_600"
                        app:strokeColor="@color/gray_600"
                        app:cornerRadius="50dp"
                        app:strokeWidth="1dp"
                       />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
